Sun Jun 13 11:52:24 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/freemem.cc: Merge in changes from omega's version.
	  Clean up whitespace issues.  Put the __WIN32__ case last, as we
	  tend to elsewhere (since most people reading the code probably
	  want to see the other version).
	  
Sun Jun 13 11:32:30 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: "MSWin32" isn't the OS name.  Also,
	  prefer += to build up a string.

Sat Jun 12 09:31:28 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_percentages.cc: Note that 1.0.x returned 4% for the top hit
	  in topercent5, so checking it gets at least 50% is a regression test
	  for that issue.

Fri Jun 11 15:38:26 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: -march=pentium4 doesn't seem to give a measurable
	  speed-up or size reduction (from Richard's tests) and it carries a
	  small risk of introducing instructions which don't work on some
	  obscure CPU which implements SSE2, so drop it.

Fri Jun 11 15:25:16 GMT 2010  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Stop forcing the wdf_max value to be at least
	  one in BM25Weight::get_maxpart() - this is no longer needed now we
	  calculate percentages based on the number of matching subqueries, and
	  it is more natural for a non-existent term to get zero weight (ditto
	  for a term which always has wdf = 0.
	* tests/api_anydb.cc: Change qterminfo1 to check that a non-existent
	  term gets zero weight (previously we checked that it got a non-zero
	  weight, but really we want to ensure that it contributes to
	  percentage calculations, which new test topercent5 now does).

Fri Jun 11 15:19:29 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_percentages.cc: Add topercent5 testcase which checks that
	  an OR search including an non-existent term doesn't get 100%, and
	  that the non-existent term doesn't score more than terms which do
	  exist.

Fri Jun 11 14:15:07 GMT 2010  Olly Betts <olly@survex.com>
