@@ -1,3 +1,7 @@
+Sun Jun 13 12:25:24 GMT 2010  Olly Betts <olly@survex.com>
+
+	* tests/perftest/freemem.cc: Fix whitespace to match Omega's version.
+
 Sun Jun 13 11:52:24 GMT 2010  Olly Betts <olly@survex.com>
 
 	* tests/perftest/freemem.cc: Merge in changes from omega's version.
